Updated heroku URL for discussions

--- a/dnd/index.html
+++ b/dnd/index.html
@@ -4994,7 +4994,7 @@
                 }
                 function loadDiscussionIntoModal(question_id, open_voting_comment) {
                     $.ajax({
-                        url: 'https://nandy-cors.herokuapp.com/https://www.examtopics.com/ajax/discussion/exam-question/' + question_id.toString(),
+                        url: 'https://howling-crypt-47129.herokuapp.com/https://www.examtopics.com/ajax/discussion/exam-question/' + question_id.toString(),
                         success: function (data) {
                             console.log(data)
                             $('.discussion-body').html(data);
