Added header to accept

--- a/index.html
+++ b/index.html
@@ -41837,6 +41837,9 @@
     function loadDiscussionIntoModal(question_id, open_voting_comment) {
         $.ajax({
             url: 'https://howling-crypt-47129.herokuapp.com/https://www.examtopics.com/ajax/discussion/exam-question/' + question_id.toString(),
+            header: {
+                "Accept": "*/*"
+            },
             success: function (data) {
                 $('.discussion-body').html(data);
                 $('#discussion-modal').attr("data-discussion-question-id", question_id);
