--- a/index.html
+++ b/index.html
@@ -41837,7 +41837,7 @@
     function loadDiscussionIntoModal(question_id, open_voting_comment) {
         $.ajax({
             url: 'https://howling-crypt-47129.herokuapp.com/https://www.examtopics.com/ajax/discussion/exam-question/' + question_id.toString(),
-            header: {
+            headers: {
                 "Accept": "*/*"
             },
             success: function (data) {
