--- a/index.html
+++ b/index.html
@@ -41836,7 +41836,7 @@
     }
     function loadDiscussionIntoModal(question_id, open_voting_comment) {
         $.ajax({
-            url: 'https://howling-crypt-47129.herokuapp.com/https://www.examtopics.com/ajax/discussion/exam-question/' + question_id.toString(),
+            url: 'https://www.examtopics.com/ajax/discussion/exam-question/' + question_id.toString(),
             headers: {
                 "Accept": "*/*"
             },
